--- a/src/MQTTLib/MQTTLib.csproj
+++ b/src/MQTTLib/MQTTLib.csproj
@@ -47,6 +47,9 @@
     <PackageReference Include="System.Memory">
       <Version>4.5.3</Version>
     </PackageReference>
+    <PackageReference Include="System.Private.DataContractSerialization">
+      <Version>4.3.0</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
