--- a/tests/Publisher/Publisher.csproj
+++ b/tests/Publisher/Publisher.csproj
@@ -51,13 +51,15 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\..\src\MQTTLib\MQTTLib.csproj">
       <Project>{8e0a4e4a-f77a-426e-926a-e54b92eea7f8}</Project>
       <Name>MQTTLib</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\Subscriber\App.config">
+      <Link>App.config</Link>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
