TLS properties now expect the PEM format of the certificates

--- a/.editorconfig
+++ b/.editorconfig
@@ -4,7 +4,7 @@
 ############################### 
 # All files 
 [*] 
-indent_style = space 
+indent_style = tabs 
 # Code files 
 [*.{cs,csx,vb,vbx}] 
 indent_size = 4 
