--- a/src/MQTTLib/MQTTLib.csproj
+++ b/src/MQTTLib/MQTTLib.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>MQTTLib</RootNamespace>
     <AssemblyName>MQTTLib</AssemblyName>
-    <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
     <TargetFrameworkProfile />
@@ -39,8 +39,12 @@
     <Compile Include="MqttClient.cs" />
     <Compile Include="MqttConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RSAKeys.cs" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="BouncyCastle">
+      <Version>1.8.5</Version>
+    </PackageReference>
     <PackageReference Include="MQTTnet">
       <Version>3.0.8</Version>
     </PackageReference>
