New properties implemented. QoS on publish was being honored

--- a/src/MQTTLib/MQTTLib.csproj
+++ b/src/MQTTLib/MQTTLib.csproj
@@ -57,7 +57,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>copy $(TargetDir)$(TargetName).* C:\GXmodels\junk\MQTTTest\CSharpModel\Web\bin
-copy $(TargetDir)MQTTnet.dll C:\GXmodels\junk\MQTTTest\CSharpModel\Web\bin</PostBuildEvent>
+    <PostBuildEvent>
+    </PostBuildEvent>
   </PropertyGroup>
 </Project>
