New MqttStatus object is returned by every MQTT static method

--- a/src/MQTTLib/MQTTLib.csproj
+++ b/src/MQTTLib/MQTTLib.csproj
@@ -38,6 +38,7 @@
   <ItemGroup>
     <Compile Include="MqttClient.cs" />
     <Compile Include="MqttConfig.cs" />
+    <Compile Include="MqttStatus.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RSAKeys.cs" />
   </ItemGroup>
