Improvements reconnecting when no Clean Session is set. Not quite there yet

--- a/src/MQTTLib/MQTTLib.csproj
+++ b/src/MQTTLib/MQTTLib.csproj
@@ -39,6 +39,7 @@
     <Compile Include="MqttClient.cs" />
     <Compile Include="MqttConfig.cs" />
     <Compile Include="MqttStatus.cs" />
+    <Compile Include="PreviousSubscription.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RSAKeys.cs" />
   </ItemGroup>
