--- a/src/MQTTLib/MQTTLib.csproj
+++ b/src/MQTTLib/MQTTLib.csproj
@@ -36,6 +36,7 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConsoleLogger.cs" />
     <Compile Include="MqttClient.cs" />
     <Compile Include="MqttConfig.cs" />
     <Compile Include="MqttStatus.cs" />
@@ -48,7 +49,7 @@
       <Version>1.8.5</Version>
     </PackageReference>
     <PackageReference Include="MQTTnet">
-      <Version>3.0.8</Version>
+      <Version>3.0.9</Version>
     </PackageReference>
     <PackageReference Include="System.Memory">
       <Version>4.5.3</Version>
