--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
     env:
       Configuration: Release
       Project: MQTTLib
-      Solution: MQTTLib.sln
+      Solution: .\src\MQTTLib\MQTTLib.csproj
       Bin: MQTTLib.dll
 
     steps:
