--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,12 @@
 name: Build
 
 on:
+  workflow_dispatch:
   push:
     branches: [ master ]
     paths: 
-      - src/
+      - .github/workflows/main.yml
+      - src/**
 
 jobs:
   build:
